--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
          run: |
            newman run 'flow_waaranty11.postman_collection.json' \
        - name : newman report
+         if: always() #ensure that archive executed no matters previous
          uses: actions/upload-artifact@v4.6.2
          with:
            name: newman report
