--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,11 @@ jobs:
        - name: Run Collection
          run: |
            newman run 'flow_waaranty11.postman_collection.json' \
-       - name : newman report
+       - name : Newman Report
          if: always() #ensure that archive executed no matters previous
          uses: actions/upload-artifact@v4.6.2
          with:
-           name: newman report
+           name: Newman Report
            path: newman/*.html
            
         
