--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
          uses: actions/upload-artifact@v4.6.2
          with:
            name: Newman Report
-           path: newman/*.html-extra
+           path: newman/newman-run-report.html
            
         
 
