--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
          if: always() #ensure that archive executed no matters previous
          uses: actions/upload-artifact@v4.6.2
          with:
-           name: Newman Report
-           path: newman/newman-run-report.html
+           name: Newman-html-report
+           path: newman/*.html
            
         
 
