--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,10 @@ jobs:
            npm install -g newman-reporter-htmlextra
        - name: Run Collection
          run: |
-           newman run 'flow_waaranty11.postman_collection.json' \
+           newman run 'flow_waaranty11.postman_collection.json' -r cli,html --reporter-html-export=newman/report.html
+
+           
+        
        - name : Newman Report
          if: always() #ensure that archive executed no matters previous
          uses: actions/upload-artifact@v4.6.2
