--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,9 @@ jobs:
            npm install -g newman-reporter-htmlextra
        - name: Run Collection
          run: |
-           newman run 'flow_waaranty11.postman_collection.json' /
+           newman run 'flow_waaranty11.postman_collection.json' \
+           -r cli,htmlextra 
+        
 
            
         
