--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
        - name: Run Collection
          run: |
            newman run 'flow_waaranty11.postman_collection.json' \
-           -r cli,htmlextra 
+           -r cli,htmlextra  \
+           --reporter-htmlextra-export ./newman/index.html
         
 
            
