--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
      branches: [main]
   workflow_dispatch:
   schedule:
-   - cron: '30 2  * * *'   #8:00 AM IST
+    cron: '30 2  * * *'   #8:00 AM IST
    - cron: '30 13 * * *'   #7:00 PM IST
 
 jobs:
