--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ on:
   push:
      branches: [main]
   workflow_dispatch:
-  schedule:
+  schdule:                        //wrong schedule
    - cron: '30 2  * * *'   #8:00 AM IST
-   - cron: '30 13 * * *'   #7:00 PM IST
+   - cron: '30 13 *  *'   #7:00 PM IST
 
 jobs:
    run-tests:
